--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,16 +1,17 @@
 <form [formGroup]="cardForm">
   <input formControlName="name">
-  <ng-container *ngIf="cardForm.controls.name.errors">
-  <div *ngIf="cardForm.controls.name.errors.required">
-    Value is required
-  </div>
+  <ng-container *ngIf="cardForm.controls.name.dirty&&cardForm.controls.name.touched &&cardForm.controls.name.errors ">
+    <div *ngIf="cardForm.controls.name.errors.required">
+      Value is required
+    </div>
     <div *ngIf="cardForm.controls.name.errors.minlength">
-    Value you entered is {{cardForm.controls.name.errors.minlength.actualLength}}
+      Value you entered is {{cardForm.controls.name.errors.minlength.actualLength}}
       characters long, but it must be at least {{cardForm.controls.name.errors.minlength.requiredLength}}
       characters
-  </div>
+    </div>
   </ng-container>
 </form>
+<hr>
 <div>FormContent: {{cardForm.value | json }}</div>
 <div>Form is valid: {{cardForm.valid }}</div>
 <div>Errors around name: {{cardForm.controls.name.errors | json }}</div>
