--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,20 +1,27 @@
-<input [formControl]="control" />
-<ng-container *ngIf="control.dirty && control.touched && control.errors">
-  <div *ngIf="control.errors.required">
-    Value is required.
+<div class="field">
+  <label class="label">{{label}}</label>
+  <div class="control">
+    <input class="input"
+           [ngClass]="{' is-danger': control.dirty && control.touched && control.errors}"
+           [formControl]="control"/>
   </div>
-  <div *ngIf="control.errors.minlength">
-    Value you entered is
-    {{ control.errors.minlength.actualLength }}
-    characters long, but it must be at least
-    {{ control.errors.minlength.requiredLength }}
-    characters
-  </div>
-  <div *ngIf="control.errors.maxlength">
-    Value you entered is
-    {{ control.errors.maxlength.actualLength }}
-    characters long, but it cannot be longer than
-    {{ control.errors.maxlength.requiredLength }}
-    characters
-  </div>
-</ng-container>
+  <ng-container *ngIf="control.dirty && control.touched && control.errors">
+    <div *ngIf="control.errors.required">
+      Value is required.
+    </div>
+    <div *ngIf="control.errors.minlength">
+      Value you entered is
+      {{ control.errors.minlength.actualLength }}
+      characters long, but it must be at least
+      {{ control.errors.minlength.requiredLength }}
+      characters
+    </div>
+    <div *ngIf="control.errors.maxlength">
+      Value you entered is
+      {{ control.errors.maxlength.actualLength }}
+      characters long, but it cannot be longer than
+      {{ control.errors.maxlength.requiredLength }}
+      characters
+    </div>
+  </ng-container>
+</div>
