Reformatting the expiration Input with match and other staff

--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="cardForm" (ngSubmit)="onSubmit()">
   <app-input label="Name" [control]="cardForm.get('name')"></app-input>
   <app-input label="Card Number" [control]="cardForm.get('cardNumber')"></app-input>
-  <app-input label="Expiration" [control]="cardForm.get('expiration')"></app-input>
+  <app-input label="Expiration: MM/YY" [control]="cardForm.get('expiration')"></app-input>
   <app-input label="Security Code" [control]="cardForm.get('securityCode')"></app-input>
   <button class="button is-primary" [disabled]="cardForm.invalid" type="submit">Submit</button>
 </form>
