--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,9 +1,11 @@
 <div class="field">
   <label class="label">{{label}}</label>
   <div class="control">
-    <input class="input"
-           [formControl]="control"
-           [ngClass]="{' is-danger': showErrors()}"
+    <input
+      mask="(000)-000-00-00"
+      class="input"
+      [formControl]="control"
+      [ngClass]="{' is-danger': showErrors()}"
     />
   </div>
   <ng-container class="help is-danger" *ngIf="showErrors()">
