Reformatting the cardNumber input with match and other stuff

--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -1,11 +1,9 @@
 <div class="field">
   <label class="label">{{label}}</label>
   <div class="control">
-    <input
-      mask="(000)-000-00-00"
-      class="input"
-      [formControl]="control"
-      [ngClass]="{' is-danger': showErrors()}"
+    <input class="input"
+           [formControl]="control"
+           [ngClass]="{' is-danger': showErrors()}"
     />
   </div>
   <ng-container class="help is-danger" *ngIf="showErrors()">
