--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,11 +1,32 @@
-<form [formGroup]="cardForm" (ngSubmit)="onSubmit()">
-  <app-input label="Name" [control]="cardForm.get('name')"></app-input>
-  <app-input label="Card Number" [control]="cardForm.get('cardNumber')"></app-input>
-  <app-input label="Expiration: MM/YY" [control]="cardForm.get('expiration')"></app-input>
-  <app-input label="Security Code" [control]="cardForm.get('securityCode')"></app-input>
-  <button class="button is-primary" [disabled]="cardForm.invalid" type="submit">Submit</button>
-</form>
-<hr />
-<div>Form Contents: {{ cardForm.value | json }}</div>
-<div>Form is valid: {{ cardForm.valid }}</div>
-<div>Errors around name: {{ cardForm.controls.name.errors | json }}</div>
+<div class="columns">
+  <div class="column">
+    <app-card [name]="cardForm.get('name').value"
+              [cardNumber]="cardForm.get('cardNumber').value"
+              [expiration]="cardForm.get('expiration').value"
+    >
+    </app-card>
+  </div>
+  <div class="column">
+    <form [formGroup]="cardForm" (ngSubmit)="onSubmit()">
+      <app-input label="Name" [control]="cardForm.get('name')"></app-input>
+      <app-input label="Card Number" [control]="cardForm.get('cardNumber')"></app-input>
+      <div class="columns">
+        <div class="column">
+          <app-input label="Expiration: MM/YY" [control]="cardForm.get('expiration')"></app-input>
+        </div>
+        <div class="column">
+          <app-input label="Security Code" [control]="cardForm.get('securityCode')"></app-input>
+        </div>
+      </div>
+      <div class="buttons">
+        <button class="button is-primary" [disabled]="cardForm.invalid" type="submit">Submit</button>
+        <button class="button is-warning" type="button" (click)="onReset()">Reset</button>
+      </div>
+    </form>
+    <hr/>
+    <div>Form Contents: {{ cardForm.value | json }}</div>
+    <div>Form is valid: {{ cardForm.valid }}</div>
+    <div>Errors around name: {{ cardForm.controls.name.errors | json }}</div>
+  </div>
+</div>
+
